apps/schoolrider/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schoolrider-api
  namespace: schoolrider
spec:
  selector:
    app: schoolrider-api
  ports:
  - port: 80
    targetPort: 9012
